--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
 
+
     <application
         android:name=".AppController"
         android:allowBackup="true"
@@ -15,6 +16,10 @@
         android:roundIcon="@mipmap/brote"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id"/>
+
         <activity
             android:name=".Presentations.login.implementations.LoginActivity"
             android:theme="@style/AppThemeA">
