--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-
-
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:name=".AppController"
@@ -16,9 +14,9 @@
         android:roundIcon="@mipmap/brote"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <meta-data android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
+        <meta-data
+            android:name="com.facebook.sdk.ApplicationId"
+            android:value="@string/facebook_app_id" />
 
         <activity
             android:name=".Presentations.login.implementations.LoginActivity"
@@ -28,7 +26,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
         <activity android:name=".MainActivity" />
         <activity
@@ -36,9 +33,9 @@
             android:label="@string/title_activity_main_tab"
             android:theme="@style/AppTheme.NoActionBar">
 
-
-
         </activity>
+        <activity android:name=".Presentations.WebYoutube.Implementations.WebYoutubeActivity"
+            android:theme="@style/AppThemeC"></activity>
     </application>
 
 </manifest>
