--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,7 @@ org.gradle.jvmargs=-Xmx1536m
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+facebook_app_id = "1264939073652570"
+openweathermap_id = "072ede38bdcd58804ca961ad3104bae8"
+host_login = "https://uphill-leg.000webhostapp.com/proyectoapptodo/usuarios/login"
+host_registro = "https://uphill-leg.000webhostapp.com/proyectoapptodo/usuarios/registro"
